# yar

./: .gitignore  CMakeLists.txt  LICENCE  README.md  yar.c  yar.h
examples/: CMakeLists.txt  large_structs.c  simple.c  string_builder.c
test/: CMakeLists.txt  append.c  append_many.c  asserts.c  insert.c  remove.c  reserve.c  zz_c++.cpp
